# django_commerce

./: README.md  app.env  database.env  docker-compose.local.yaml  manage.py  pyproject.toml
django_commerce/: asgi.py  settings.py  urls.py  wsgi.py
